--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -39,7 +39,7 @@ corrected_data <- correct(proofed_data, year = params$year)
 
 # Introduction
 
-This is a summary report of the `r params$year` Season of Harvest Information Program (HIP) data. This year, `r nrow(proofed_data)` records were submitted from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states.
+This is a summary report of the `r params$year` Season of Harvest Information Program (HIP) data. This year, `r nrow(fixed_data)` unique records were submitted in `r length(list.files(params$comp_path, recursive = TRUE) %>% as_tibble() %>% transmute(filepath = as.character(value)) %>% mutate(filepath = str_replace(filepath, "TXT", "txt")) %>% filter(str_detect(filepath, "(?<=\\.)txt$")) %>% pull)` files from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states.
 
 Below is a table summarizing the total of number of records per download state.
 
