--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -33,7 +33,7 @@ fixed_data <- fixDuplicates(cleaned_data)
 
 proofed_data <- proof(fixed_data, year = params$year)
 
-corrected_data <- correct(proofed_data, year = params$year)
+corrected_data <- correct(proofed_data, year = params$year, data = "bag")
 
 ```
 
