--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -10,6 +10,8 @@ output:
 params:
   comp_path:
     value: x
+  dl:
+    value: x
   year:
     value: x
 ---
@@ -22,7 +24,14 @@ library(shiny)
 
 ```{r import, include = FALSE}
 
-dl_data <- read_hip(params$comp_path)
+acceptable_49_dl_states <-
+        c("AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA", "ID",
+          "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN",
+          "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND",
+          "OH", "OK", "OR","PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT",
+          "VA", "WA", "WV", "WI", "WY")
+
+dl_data <- read_hip(params$comp_path) %>% mutate(dl_cycle = params$dl)
 
 cleaned_data <- clean(dl_data)
 
@@ -55,11 +64,82 @@ DT::datatable(cleaned_data %>%
 
 # Data Checking
 
+## Records checking
+
+The following records are missing first name, last name, date of birth, address, city, state of residence, and/or state AND zip.
+
+```{r record_check, echo = FALSE}
+record_check <- 
+  dl_data %>%
+    rename(
+      title = X1,
+      firstname = X2,
+      middle = X3,
+      lastname = X4,
+      suffix = X5,
+      address = X6,
+      city = X7,
+      state = X8,
+      zip = X9,
+      birth_date = X10,
+      # Edited X11 to specific .data$X11 to avoid error:
+      # "Found an obsolete/platform-specific call in: 'tidy'"
+      # "Found the platform-specific device: 'X11'"
+      issue_date = .data$X11,
+      hunt_mig_birds = X12,
+      ducks_bag = X13,
+      geese_bag = X14,
+      dove_bag = X15,
+      woodcock_bag = X16,
+      coots_snipe = X17,
+      rails_gallinules = X18,
+      cranes = X19,
+      band_tailed_pigeon = X20,
+      brant = X21,
+      seaducks = X22,
+      registration_yr = X23,
+      email = X24) %>%
+    # Filter out records if firstname, lastname, city of residence, state of
+    # residence, or date of birth are missing -- records discarded because
+    # these are needed to identify individuals
+    filter(!is.na(firstname)) %>%
+    filter(!is.na(lastname)) %>%
+    filter(!is.na(state)) %>%
+    filter(!is.na(birth_date)) %>%
+    # Discard additional records if they are missing elements of an address
+    # and we have no way to resolve it from remaining information (i.e. state
+    # from zip)
+    filter(!is.na(address)) %>%
+    filter(!is.na(city)) %>%
+    filter(!is.na(state) & !is.na(zip))
+
+DT::datatable(record_check)
+```
+
+## State check
+
+```{r state_check, echo = FALSE}
+rm(record_check)
+
+state_check <-
+  clean_data %>% 
+  select(state) %>% 
+  group_by(state) %>% 
+  summarize(n_records = n()) %>% 
+  ungroup() %>% 
+  mutate(valid = ifelse(!(state %in% acceptable_49_dl_states), "invalid", NA)) %>% 
+  arrange(valid)
+
+DT::datatable(state_check)
+```
+
 ## Duplicates
 
 ### Before fixDuplicates (all 49 states)
 
 ```{r b_fd, echo = FALSE}
+rm(state_check)
+
 findDuplicates(cleaned_data)
 
 DT::datatable(findDuplicates(cleaned_data, return = "table"))
@@ -77,6 +157,26 @@ DT::datatable(findDuplicates(fixed_data, return = "table"))
 
 ```{r stratacheck, echo = FALSE}
 DT::datatable(strataCheck(fixed_data))
+```
+
+## All 0 records
+
+```{r all0, echo = FALSE}
+all0s <- 
+  fixed_data %>% 
+  filter(
+    ducks_bag == "0" &
+      geese_bag == "0" &
+      dove_bag == "0" &
+      woodcock_bag == "0" &
+      coots_snipe == "0" &
+      rails_gallinules == "0" &
+      cranes == "0" &
+      band_tailed_pigeon == "0" &
+      brant == "0" &
+      seaducks == "0")
+
+DT::datatable(all0s)
 ```
 
 ## Repeated values
