--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -85,7 +85,7 @@ record_check <-
       # Edited X11 to specific .data$X11 to avoid error:
       # "Found an obsolete/platform-specific call in: 'tidy'"
       # "Found the platform-specific device: 'X11'"
-      issue_date = .data$X11,
+      issue_date = X11,
       hunt_mig_birds = X12,
       ducks_bag = X13,
       geese_bag = X14,
