--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -42,11 +42,31 @@ proofed_data <- proof(fixed_data, year = params$year)
 
 corrected_data <- correct(proofed_data, year = params$year, data = "bag")
 
+# Summarize number of records from Canada
+canada_records <-
+  fixed_data %>% 
+  select(state) %>% 
+  filter(state %in% c("AB", "BC", "MB", "NB", "NL", "NT", "NS", "NU", "ON", "PE", "QC", "SK", "YT")) %>% 
+  nrow()
+
+# Summarize number of bad zip codes
+zip_check <-
+  fixed_data %>% 
+  mutate(zipPrefix = str_extract(zip, "^[0-9]{3}")) %>%
+  left_join(
+    zip_code_ref %>%
+      select(zipPrefix, zipState = state),
+    by = "zipPrefix") %>%
+  filter(state != zipState) %>% 
+  nrow()
+
 ```
 
 # Introduction
 
-This is a report of download cycle `r proofed_data %>% select(dl_cycle) %>% distinct %>% pull`. This cycle, `r sumLines(params$comp_path)` lines of data (`r nrow(fixed_data)` unique records) were submitted in `r length(list.files(params$comp_path) %>% as_tibble() %>% transmute(filepath = as.character(value)) %>% mutate(filepath = str_replace(filepath, "TXT", "txt")) %>% filter(str_detect(filepath, "(?<=\\.)txt$")) %>% pull)` files from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states.
+This is a report of download cycle `r proofed_data %>% select(dl_cycle) %>% distinct %>% pull`. This cycle, `r sumLines(params$comp_path)` lines of data (`r nrow(fixed_data)` unique records) were submitted in `r length(list.files(params$comp_path) %>% as_tibble() %>% transmute(filepath = as.character(value)) %>% mutate(filepath = str_replace(filepath, "TXT", "txt")) %>% filter(str_detect(filepath, "(?<=\\.)txt$")) %>% pull)` files from `r proofed_data %>% select(dl_state) %>% distinct %>% nrow()` states. 
+
+There are `r canada_records` records in this download from Canadian hunters. A total of `r zip_check` records contain zip codes that are not correct based on the provided state of residence.
 
 Below is a table summarizing the total of number of records per download state.
 
@@ -177,29 +197,6 @@ pii_summary <-
 
 DT::datatable(pii_summary)
 rm(pii_summary)
-```
-
-## Zip code accuracy checking 
-
-Check to see which records have reported zip codes that do not belong to the state of residence.
-
-```{r zip, echo = FALSE}
-zip_check <-
-  fixed_data %>% 
-  mutate(zipPrefix = str_extract(zip, "^[0-9]{3}")) %>%
-  left_join(
-    zip_code_ref %>%
-      select(zipPrefix, zipState = state),
-    by = "zipPrefix") %>%
-  filter(state != zipState) %>% 
-  select(
-    record_key, 
-    zip, 
-    state_provided = state, 
-    correct_state = zipState)
-      
-DT::datatable(zip_check)
-rm(zip_check)
 ```
 
 ## Duplicates
